
 
service TweetService {
    // emits(TweetPostedEvent)
    post(tweet : Tweet) -> TweetId

    // emits(TweetDeletedEvent)
    delete(id : TweetId) -> Bool

    // emits(TweetEditedEvent)
    edit(tweet : Tweet) -> Bool

    // Returns tweet given its ID
    get(id : TweetId) -> Tweet
}
 
Timeline Service
TimelineService {
    // Returns a user's home timeline with recent N tweets from 
    // all users the user follows
    getTimeline(user : UserId, N : int) -> [Tweet]

    // Returns most recent N tweets for a user
    getRecentTweets(user : UserId, N : int) -> [Tweet]
}

